# Gutenberg

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt  QFontIconParser.cpp  QFontIconParser.h  main.cpp
CMake/: GutenbergBuildFontMacro.cmake  GutenbergConfig.cmake.in  GutenbergConfigureDownloadedFontMacro.cmake  GutenbergFontAwesomeMacro.cmake  GutenbergLauncher.bat.in  GutenbergLauncher.sh.in  GutenbergResource.qrc.in
Demo/: CMakeLists.txt
Demo/AutomaticFontAwesomeDemo/: CMakeLists.txt  main.cpp
Demo/QMLDemo/: CMakeLists.txt  QMLDemo.qml  QMLDemoResources.qrc  main.cpp
Demo/SimpleDemo/: CMakeLists.txt  main.cpp  test.css  test.qrc
